# T2T2

./: .cursorrules  .deployment-trigger  .editorconfig  .env.example  .eslintrc.json  .eslintrc.local.json  .gitignore  .markdownlint.json  .prettierignore  .railwayignore  AGENT_GUIDELINES.md  AGENT_GUIDELINES_COMPACT.md  AI_INSTRUCTIONS.md  AI_SAFETY_FEATURES.md  BOT_DEPLOY.md  COMPRESSION_STATS.md  CRITICAL_PATHS_COMPACT.md  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  ENVIRONMENT_COMPACT.md  HANDOFF.md  HANDOFF_COMPACT.md  HANDOFF_STATUS.txt  LICENSE  MCP_PACKAGE_NOTICE.md  Procfile  README-NEW.md  README.md  README_SAFETY.md  SETUP_CHECKLIST.md  TEAM_BOT_README.md  TELEGRAM_AUTH_DEBUG_HANDOFF.md  TELEGRAM_AUTH_HANDOFF.md  add_pending_auth_table.sql  add_user_sessions_table.sql  bot.py  bot_old.py  check_bot_setup.py  check_tables.sql  (+53 more)
backend/: .env.example  .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt  run_tests.sh  test_app.py  test_basic_connections.py  test_connections.py  test_services.py  test_supabase.py
backend/api/: dependencies.py
backend/db/: add_chunk_metadata.sql  database.py  init.sql  user_messages_rls.sql
backend/models/: models.py
backend/scripts/: check_env_defaults.py  check_imports.py
backend/services/: auth_service.py  bot_service.py  chat_service.py  embedding_service.py  embedding_service_old.py  image_service.py  query_service.py  rag_service.py  smart_chunking_service.py  telegram_service.py
backend/tests/: conftest.py  test_auth.py  test_database_compatibility.py  test_models.py  test_rls.py  test_security.py
backend/utils/: auth.py  cache.py  logging.py  security.py  (+1 more)
(+102 files in other folders)
